took off card padding

--- a/2-courses.html
+++ b/2-courses.html
@@ -78,8 +78,8 @@
 <!--.............. results section................................. -->
       <section class="results video m-4">
         <p>11 videos</p>
-        <div class="row">
-          <div class="card m-3">
+        <div class="row m-3">
+          <div class="card m-sm-2 col-12 col-md-3 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -91,7 +91,86 @@
                 <div class="col-2 ml-3">
                   <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
                 </div>
-                <h3 class="card-title text-purple">Phillip Massey</h3>
+                <h3 class="card-title text-purple ml-3">Phillip Massey</h3>
+              </div>
+              <div class="row">
+                <div class="col-8 ml-3">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_off.png" alt="star_off" class="small-star">
+                </div>
+                <p class="text-purple">8 min</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card m-sm-2 col-12 col-md-3 p-0">
+            <div class="img-text">
+              <div class="image-container">
+                <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+                <img src="images/play.png" alt="play" class="position-absolute play-button">
+              </div>
+              <h3 class="ml-3 mt-2">Natural Smile</h3>
+              <p class="ml-3">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div class="row align-items-center">
+                <div class="col-2 ml-3">
+                  <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                </div>
+                <h3 class="card-title text-purple ml-3">Phillip Massey</h3>
+              </div>
+              <div class="row">
+                <div class="col-8 ml-3">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_off.png" alt="star_off" class="small-star">
+                </div>
+                <p class="text-purple">8 min</p>
+              </div>
+            </div>
+          </div>
+          <div class="card m-sm-2 col-12 col-md-3 p-0">
+            <div class="img-text">
+              <div class="image-container">
+                <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+                <img src="images/play.png" alt="play" class="position-absolute play-button">
+              </div>
+              <h3 class="ml-3 mt-2">Natural Smile</h3>
+              <p class="ml-3">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div class="row align-items-center">
+                <div class="col-2 ml-3">
+                  <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                </div>
+                <h3 class="card-title text-purple ml-3">Phillip Massey</h3>
+              </div>
+              <div class="row">
+                <div class="col-8 ml-3">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_off.png" alt="star_off" class="small-star">
+                </div>
+                <p class="text-purple">8 min</p>
+              </div>
+            </div>
+          </div>
+          <div class="card m-sm-2 col-12 col-md-3 p-0">
+            <div class="img-text">
+              <div class="image-container">
+                <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+                <img src="images/play.png" alt="play" class="position-absolute play-button">
+              </div>
+              <h3 class="ml-3 mt-2">Natural Smile</h3>
+              <p class="ml-3">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div class="row align-items-center">
+                <div class="col-2 ml-3">
+                  <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                </div>
+                <h3 class="card-title text-purple ml-3">Phillip Massey</h3>
               </div>
               <div class="row">
                 <div class="col-8 ml-3">
