--- a/2-courses.html
+++ b/2-courses.html
@@ -78,8 +78,8 @@
 <!--.............. results section................................. -->
       <section class="results video m-4">
         <p>11 videos</p>
-        <div class="row m-3">
-          <div class="card m-sm-2 col-12 col-md-3 p-0">
+        <div class="row mt-3">
+          <div class="card col-12 col-md-3 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="card m-sm-2 col-12 col-md-3 p-0">
+          <div class="card col-12 col-md-3 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -132,7 +132,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-sm-2 col-12 col-md-3 p-0">
+          <div class="card col-12 col-md-3 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-sm-2 col-12 col-md-3 p-0">
+          <div class="card col-12 col-md-3 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
