--- a/2-courses.html
+++ b/2-courses.html
@@ -79,7 +79,7 @@
       <section class="results video m-4">
         <p>11 videos</p>
         <div class="row mt-3">
-          <div class="card col-12 col-md-3 p-0">
+          <div class="card col-12 col-lg-3 col-md-4 col-sm-6 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="card col-12 col-md-3 p-0">
+          <div class="card col-12 col-lg-3 col-md-4 col-sm-6 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -132,7 +132,7 @@
               </div>
             </div>
           </div>
-          <div class="card col-12 col-md-3 p-0">
+          <div class="card col-12 col-lg-3 col-md-4 col-sm-6 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="card col-12 col-md-3 p-0">
+          <div class="card col-12 col-lg-3 col-md-4 col-sm-6 p-0">
             <div class="img-text">
               <div class="image-container">
                 <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
